Build native package with docker